Fixed scrollbar issue on chrome for nyt app

--- a/assets/universal.css
+++ b/assets/universal.css
@@ -1,3 +1,16 @@
+/* Hide scrollbar when inactive */
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
+}
+
+/* Show scrollbar when scrolling */
+.scroll-container:hover::-webkit-scrollbar {
+    width: 8px; /* Adjust as needed */
+    height: 8px;
+}
+
+
 .form-select {
     background-color: var(--bs-body-bg) !important;
     color: var(--bs-info) !important;
